--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer componens {
+  .align-element {
+    @apply mx-auto max-w-6xl px-8;
+  }
+}
